# ddl-dockerfiles

./: .dockerignore  .env.dev  Dockerfile  Dockerfile_0  Dockerfile_1  Dockerfile_1a  Dockerfile_2  Dockerfile_3  Dockerfile_3 copy  Dockerfile_4  Dockerfile_5  Dockerfile_frontend  README.md  compose.yaml  pyproject.toml
api/: main.py
scripts/: docker-base-alpine.sh  entrypoint.sh
