[tool.poetry]
name = "ddl-dockerfiles"
version = "0.2.0"
description = ""
authors = ["Matt Alioto <matthew.j.alioto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.115"
uvicorn = "~0.32"
requests = "~2.32"
pydantic = "~2.9"
sqlalchemy = "~2.0"
alembic = "~1.13"
svix = "~1.38"
pyjwt = "~2.9"
cryptography = "~43.0"
numpy = "~2.1"
# streamlit = "~1.39"

[tool.poetry.group.dev.dependencies]
ruff = "~0.6"
bandit = "~1.7"
pre-commit = "~4.0"
pylint = "~3.3"
mypy = "~1.12"
types-requests = "~2.32"
types-urllib3 = "~1.26"
pytest = "~8.3"
pytest-asyncio = "~0.24"
pytest-cov = "~5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
